@@ -30,6 +30,8 @@ import org.apache.hadoop.hdfs.protocol.Block;
 import org.apache.hadoop.hdfs.protocol.DatanodeID;
 import org.apache.hadoop.hdfs.protocol.FSConstants;
 import org.apache.hadoop.hdfs.protocol.HdfsFileStatus;
+import org.apache.hadoop.hdfs.protocol.LayoutVersion;
+import org.apache.hadoop.hdfs.protocol.LayoutVersion.Feature;
 import org.apache.hadoop.hdfs.security.token.delegation.DelegationTokenIdentifier;
 import static org.apache.hadoop.hdfs.server.common.Util.now;
 import org.apache.hadoop.hdfs.server.common.GenerationStamp;
@@ -151,7 +153,7 @@ public class FSEditLogLoader {
           path = FSImageSerialization.readString(in);
           short replication = fsNamesys.adjustReplication(readShort(in));
           mtime = readLong(in);
-          if (logVersion <= -17) {
+          if (LayoutVersion.supports(Feature.FILE_ACCESS_TIME, logVersion)) {
             atime = readLong(in);
           }
           if (logVersion < -7) {
@@ -237,10 +239,6 @@ public class FSEditLogLoader {
           break;
         } 
         case Ops.OP_CONCAT_DELETE: {
-          if (logVersion > -22) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpConcatDelete++;
           int length = in.readInt();
           if (length < 3) { // trg, srcs.., timestam
@@ -299,7 +297,7 @@ public class FSEditLogLoader {
           // The disk format stores atimes for directories as well.
           // However, currently this is not being updated/used because of
           // performance reasons.
-          if (logVersion <= -17) {
+          if (LayoutVersion.supports(Feature.FILE_ACCESS_TIME, logVersion)) {
             atime = readLong(in);
           }
 
@@ -330,38 +328,24 @@ public class FSEditLogLoader {
         }
         case Ops.OP_SET_PERMISSIONS: {
           numOpSetPerm++;
-          if (logVersion > -11)
-            throw new IOException("Unexpected opcode " + opcode
-                                  + " for version " + logVersion);
           fsDir.unprotectedSetPermission(
               FSImageSerialization.readString(in), FsPermission.read(in));
           break;
         }
         case Ops.OP_SET_OWNER: {
           numOpSetOwner++;
-          if (logVersion > -11)
-            throw new IOException("Unexpected opcode " + opcode
-                                  + " for version " + logVersion);
           fsDir.unprotectedSetOwner(FSImageSerialization.readString(in),
               FSImageSerialization.readString_EmptyAsNull(in),
               FSImageSerialization.readString_EmptyAsNull(in));
           break;
         }
         case Ops.OP_SET_NS_QUOTA: {
-          if (logVersion > -16) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           fsDir.unprotectedSetQuota(FSImageSerialization.readString(in), 
                                     readLongWritable(in), 
                                     FSConstants.QUOTA_DONT_SET);
           break;
         }
         case Ops.OP_CLEAR_NS_QUOTA: {
-          if (logVersion > -16) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           fsDir.unprotectedSetQuota(FSImageSerialization.readString(in),
                                     FSConstants.QUOTA_RESET,
                                     FSConstants.QUOTA_DONT_SET);
@@ -404,10 +388,6 @@ public class FSEditLogLoader {
           break;
         }
         case Ops.OP_RENAME: {
-          if (logVersion > -21) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpRename++;
           int length = in.readInt();
           if (length != 3) {
@@ -424,10 +404,6 @@ public class FSEditLogLoader {
           break;
         }
         case Ops.OP_GET_DELEGATION_TOKEN: {
-          if (logVersion > -24) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpGetDelegationToken++;
           DelegationTokenIdentifier delegationTokenId = 
               new DelegationTokenIdentifier();
@@ -438,10 +414,6 @@ public class FSEditLogLoader {
           break;
         }
         case Ops.OP_RENEW_DELEGATION_TOKEN: {
-          if (logVersion > -24) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpRenewDelegationToken++;
           DelegationTokenIdentifier delegationTokenId = 
               new DelegationTokenIdentifier();
@@ -452,10 +424,6 @@ public class FSEditLogLoader {
           break;
         }
         case Ops.OP_CANCEL_DELEGATION_TOKEN: {
-          if (logVersion > -24) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpCancelDelegationToken++;
           DelegationTokenIdentifier delegationTokenId = 
               new DelegationTokenIdentifier();
@@ -465,10 +433,6 @@ public class FSEditLogLoader {
           break;
         }
         case Ops.OP_UPDATE_MASTER_KEY: {
-          if (logVersion > -24) {
-            throw new IOException("Unexpected opcode " + opcode
-                + " for version " + logVersion);
-          }
           numOpUpdateMasterKey++;
           DelegationKey delegationKey = new DelegationKey();
           delegationKey.readFields(in);
